--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,6 @@
 #header-container {
     display: flex;
-    width: 1100px;
+    width: 60%;
     margin: 0 auto;
     align-items: center;
     margin-bottom: 2em;
