--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -39,8 +39,8 @@
     position: absolute;
     z-index: -5;
     content: '';
-    height: 300px;
-    width: 300px;
+    height: 60%;
+    width: 60%;
     background-color: red;
     border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%  ;
     box-shadow: 0px 0 200px rgb(0, 157, 255);
