--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -5,7 +5,7 @@
 #footer-container {
     width: 60%;
     margin: 0 auto;
-    padding: 3em 0;
+    padding: 0 0 2em;
     gap: 6em;
     display: flex;
 }
@@ -41,4 +41,13 @@
     text-align: right;
     flex-grow: 1;
     flex-basis: 0;
+}
+
+.fc-links-content p a {
+    color: var(--default-white);
+    padding-bottom: 4px;
+}
+
+.fc-links-content p a:hover {
+    box-shadow: 0 2px 0px var(--default-shadow-gray);
 }
