--- a/src/components/misionvision/mv-responsive.css
+++ b/src/components/misionvision/mv-responsive.css
@@ -5,7 +5,7 @@
 }
 
 @media screen and (max-width: 768px) {
-    #objetivos {
+    #objetivos, .left, .right {
         width: 400px;
     }
 
@@ -15,10 +15,10 @@
         align-items: center;
         gap: 4em;
     }
+}
 
-    .left, .right {
-        width: 400px;
+@media screen and (max-width: 425px) {
+    #objetivos, .left, .right  {
+        width: 270px;
     }
-
-    
 }
