--- a/src/components/thebest/tag.css
+++ b/src/components/thebest/tag.css
@@ -1,7 +1,7 @@
 #tag {
     display: flex;
     border-radius: 10px;
-    gap: 10px;
+    gap: 1em;
     background-color: #060E1C;
     padding: 10px 20px;
     align-items: center;
