--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -1,17 +1,17 @@
+/* la barra completa de menu */
 #menu {
     position: sticky;
     z-index: 5;
     margin: 2em auto;
     padding: 10px 0;
     top: 2em;
-    overflow: hidden;
     border-radius: 20px;
     width: 600px;
     display: flex;
     background-color: var(--dark-ocean-blue);
 }
 
-#lockerglogo {
+#logo {
     width: 40px;
 }
 
