--- a/src/components/header/header-responsive.css
+++ b/src/components/header/header-responsive.css
@@ -9,3 +9,33 @@
         width: 600px;
     }
 }
+
+@media screen and (max-width: 600px) {
+    #header-container {
+        width: 500px;
+    }
+
+    #description-header {
+        line-height: 2;
+    }
+
+    #header-content {
+        gap: 1em;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    #header-container {
+        width: 300px;
+        flex-direction: column;
+        gap: 1em;
+    }
+
+    #header-burger {
+        width: 200px;
+    }
+
+    #title-header {
+        font-size: 2rem;
+    }
+}
